[tool.poetry]
name = "breadbro"
version = "0.1.0"
description = ""
authors = ["hyeseong-lee <hyeseong43@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Twisted = "^21.2.0"
names = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
